--- a/src/content/blogs/astro-component.mdx
+++ b/src/content/blogs/astro-component.mdx
@@ -13,8 +13,9 @@ Astro allows you to build reusable components using any JavaScript framework you
 ## Creating a React Component in Astro
 
 ```jsx
-import React from 'react';
+import React from "react";
 
 export default function Button({ label }) {
   return <button className="btn">{label}</button>;
 }
+```
