removed long dash

--- a/src/content/blogs/the-essence-of-love.mdx
+++ b/src/content/blogs/the-essence-of-love.mdx
@@ -12,7 +12,7 @@ Love is one of the most profound emotions that define the human experience. It c
 
 ## The Many Forms of Love
 
-Love is not limited to romance—it exists in many forms:
+Love is not limited to romance-it exists in many forms:
 
 - **Romantic Love**: The deep emotional and physical connection between partners.
 - **Familial Love**: The unconditional love we share with family members.
